--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -166,6 +166,9 @@
                                     <a href="./injectables/ApiService.html" >ApiService</a>
                                 </li>
                                 <li class="link">
+                                    <a href="./injectables/DeleteRecordService.html" >DeleteRecordService</a>
+                                </li>
+                                <li class="link">
                                     <a href="./injectables/UploadService.html" >UploadService</a>
                                 </li>
                         </ul>
@@ -365,6 +368,9 @@
                                            <a href="./injectables/ApiService.html" >ApiService</a>
                                        </li>
                                        <li class="link">
+                                           <a href="./injectables/DeleteRecordService.html" >DeleteRecordService</a>
+                                       </li>
+                                       <li class="link">
                                            <a href="./injectables/UploadService.html" >UploadService</a>
                                        </li>
                                </ul>
@@ -521,7 +527,7 @@
             </td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/6)</span>
+                <span class="coverage-count">(0/8)</span>
             </td>
         </tr>
         <tr class="low">
@@ -559,6 +565,22 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                    <a href="./injectables/DeleteRecordService.html">src/app/delete-record.service.ts</a>
+            </td>
+            <td>
+                injectable
+            </td>
+            <td>
+                DeleteRecordService
+            </td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                     <a href="./components/OrderAddComponent.html">src/app/order-module/order-add/order-add.component.ts</a>
             </td>
             <td>
@@ -569,7 +591,7 @@
             </td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/63)</span>
+                <span class="coverage-count">(0/65)</span>
             </td>
         </tr>
         <tr class="low">
@@ -617,7 +639,7 @@
             </td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+                <span class="coverage-count">(0/10)</span>
             </td>
         </tr>
         <tr class="low">
