--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -166,6 +166,9 @@
                                     <a href="./injectables/ApiService.html" >ApiService</a>
                                 </li>
                                 <li class="link">
+                                    <a href="./injectables/DeleteRecordService.html" >DeleteRecordService</a>
+                                </li>
+                                <li class="link">
                                     <a href="./injectables/UploadService.html" >UploadService</a>
                                 </li>
                         </ul>
@@ -365,6 +368,9 @@
                                            <a href="./injectables/ApiService.html" >ApiService</a>
                                        </li>
                                        <li class="link">
+                                           <a href="./injectables/DeleteRecordService.html" >DeleteRecordService</a>
+                                       </li>
+                                       <li class="link">
                                            <a href="./injectables/UploadService.html" >UploadService</a>
                                        </li>
                                </ul>
@@ -452,6 +458,7 @@
         <li><b>json-server</b> : ^0.12.1</li>
         <li><b>material-components-web</b> : ^0.28.0</li>
         <li><b>moment</b> : ^2.20.1</li>
+        <li><b>ngx-loading</b> : ^1.0.14</li>
         <li><b>ngx-papaparse</b> : ^2.0.4</li>
         <li><b>rxjs</b> : ^5.5.2</li>
         <li><b>zone.js</b> : ^0.8.14</li>
