--- a/documentation/overview.html
+++ b/documentation/overview.html
@@ -166,6 +166,9 @@
                                     <a href="./injectables/ApiService.html" >ApiService</a>
                                 </li>
                                 <li class="link">
+                                    <a href="./injectables/DeleteRecordService.html" >DeleteRecordService</a>
+                                </li>
+                                <li class="link">
                                     <a href="./injectables/UploadService.html" >UploadService</a>
                                 </li>
                         </ul>
@@ -363,6 +366,9 @@
                    >
                                        <li class="link">
                                            <a href="./injectables/ApiService.html" >ApiService</a>
+                                       </li>
+                                       <li class="link">
+                                           <a href="./injectables/DeleteRecordService.html" >DeleteRecordService</a>
                                        </li>
                                        <li class="link">
                                            <a href="./injectables/UploadService.html" >UploadService</a>
@@ -760,7 +766,7 @@
                 <div class="card text-center">
                     <div class="card-block">
                         <h4 class="card-title"><span class="fa fa-code-fork"></span></h4>
-                        <p class="card-text">2 injectables</p>
+                        <p class="card-text">3 injectables</p>
                     </div>
                 </div>
             </div>
